[gd_scene format=3 uid="uid://bkjd5mneny7c1"]

[ext_resource type="Script" uid="uid://b78ceum26wnjq" path="res://Scripts/simple_player_character.gd" id="1_hgq6l"]
[ext_resource type="Texture2D" uid="uid://br21lo6rpcuvq" path="res://Assets/Dogs/OutlinedDog/FACES_C.png" id="2_nccp2"]
[ext_resource type="Texture2D" uid="uid://c1xp2p4lnown3" path="res://Assets/Dogs/NewDog/newdog_legsFRONT_sheet_C.png" id="3_cyf8n"]
[ext_resource type="AudioStream" uid="uid://bj3kggw0gs3xi" path="res://Assets/Sound/bark.wav" id="4_7e683"]
[ext_resource type="Texture2D" uid="uid://cxm52e0c581yk" path="res://Assets/Dogs/cosmetics/hat_christmas.png" id="5_ddf6l"]
[ext_resource type="Texture2D" uid="uid://baisbs5c35f4g" path="res://Assets/Dogs/cosmetics/hat_cowboy.png" id="6_82a65"]
[ext_resource type="Texture2D" uid="uid://dvj0pjlmvqwve" path="res://Assets/Dogs/cosmetics/hat_crashdummyDot.png" id="7_105w1"]
[ext_resource type="Texture2D" uid="uid://bmdnyc2fq6qg7" path="res://Assets/Dogs/cosmetics/hat_helmet.png" id="8_l1xol"]
[ext_resource type="Texture2D" uid="uid://bywajg5yonlif" path="res://Assets/UI/arrow.png" id="9_50el2"]
[ext_resource type="Texture2D" uid="uid://76dljaeimam1" path="res://Assets/Dogs/OutlinedDog/BUTT_C.png" id="10_m7s8p"]
[ext_resource type="Texture2D" uid="uid://cqa6r0md8lct2" path="res://Assets/Dogs/OutlinedDog/TAIL_C.png" id="11_ei6el"]
[ext_resource type="Texture2D" uid="uid://bid4i25qetdmx" path="res://Assets/Dogs/TAILS.png" id="12_8os0a"]
[ext_resource type="Texture2D" uid="uid://be7ausi6tfjmr" path="res://Assets/Dogs/NewDog/newdog_LegsBACK_sheet_C.png" id="13_pdohe"]
[ext_resource type="Script" uid="uid://brb1sob6alono" path="res://Scripts/paused_input_buffer.gd" id="14_x26c4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7we7l"]
size = Vector2(27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_45bpw"]
atlas = ExtResource("2_nccp2")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v2bu"]
atlas = ExtResource("2_nccp2")
region = Rect2(0, 0, 43, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_2kam3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45bpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v2bu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlucr"]
atlas = ExtResource("3_cyf8n")
region = Rect2(0, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0jc0"]
atlas = ExtResource("3_cyf8n")
region = Rect2(32, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqkaf"]
atlas = ExtResource("3_cyf8n")
region = Rect2(64, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgbr8"]
atlas = ExtResource("3_cyf8n")
region = Rect2(96, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjwsp"]
atlas = ExtResource("3_cyf8n")
region = Rect2(128, 0, 32, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_rudug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlucr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0jc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqkaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgbr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjwsp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qqgea"]
radius = 16.0
height = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xmaxq"]
atlas = ExtResource("12_8os0a")
region = Rect2(23, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj3i6"]
atlas = ExtResource("12_8os0a")
region = Rect2(46, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_2afur"]
atlas = ExtResource("12_8os0a")
region = Rect2(0, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt3ar"]
atlas = ExtResource("12_8os0a")
region = Rect2(46, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_taul4"]
atlas = ExtResource("12_8os0a")
region = Rect2(69, 0, 23, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l62o"]
atlas = ExtResource("12_8os0a")
region = Rect2(0, 0, 23, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_4dxs5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmaxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj3i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2afur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taul4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l62o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt3ar")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4rppu"]
atlas = ExtResource("13_pdohe")
region = Rect2(0, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4layu"]
atlas = ExtResource("13_pdohe")
region = Rect2(32, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjimy"]
atlas = ExtResource("13_pdohe")
region = Rect2(64, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g5d7"]
atlas = ExtResource("13_pdohe")
region = Rect2(96, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4js1l"]
atlas = ExtResource("13_pdohe")
region = Rect2(128, 0, 32, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_d51rk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rppu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4layu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjimy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g5d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4js1l")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="PlayerDog" type="Area2D" unique_id=1420059897 groups=["Dangers"]]
script = ExtResource("1_hgq6l")
MOVE_SPEED = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=137496318 groups=["Dangers"]]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_7we7l")

[node name="Head" type="AnimatedSprite2D" parent="." unique_id=1133492690]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2kam3")
frame_progress = 0.897358

[node name="Legs" type="AnimatedSprite2D" parent="Head" unique_id=1387958937]
z_index = -1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_rudug")
frame_progress = 0.515546

[node name="BarkSound" type="AudioStreamPlayer2D" parent="Head" unique_id=1187651775]
stream = ExtResource("4_7e683")
bus = &"SFX"

[node name="Hats" type="Node2D" parent="Head" unique_id=1131824743]

[node name="HatNone" type="Sprite2D" parent="Head/Hats" unique_id=358678174]
visible = false

[node name="HatChristmas" type="Sprite2D" parent="Head/Hats" unique_id=1072882123]
visible = false
z_index = 1
position = Vector2(1, -17)
texture = ExtResource("5_ddf6l")

[node name="HatCowboy" type="Sprite2D" parent="Head/Hats" unique_id=1915035583]
visible = false
z_index = 1
position = Vector2(1, -11)
texture = ExtResource("6_82a65")

[node name="HatCrashdummyDot" type="Sprite2D" parent="Head/Hats" unique_id=560476500]
visible = false
z_index = 1
position = Vector2(-6, -6)
texture = ExtResource("7_105w1")

[node name="HatHelmet" type="Sprite2D" parent="Head/Hats" unique_id=1801449873]
visible = false
z_index = 1
position = Vector2(1, -4)
texture = ExtResource("8_l1xol")

[node name="ArrowHolder" type="Node2D" parent="Head" unique_id=1674398659]
visible = false

[node name="Arrow" type="Sprite2D" parent="Head/ArrowHolder" unique_id=1888289966]
position = Vector2(0, 43.465)
rotation = 1.5708
scale = Vector2(0.03, 0.04)
texture = ExtResource("9_50el2")

[node name="Butt" type="Area2D" parent="." unique_id=889073207]
position = Vector2(0, -27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Butt" unique_id=768490806]
position = Vector2(0, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qqgea")

[node name="ButtSprite" type="Sprite2D" parent="Butt" unique_id=1241723961]
z_index = 1
texture_filter = 1
texture = ExtResource("10_m7s8p")

[node name="Tail2" type="Sprite2D" parent="Butt/ButtSprite" unique_id=259912928]
z_index = -2
texture_filter = 1
position = Vector2(0, -11)
texture = ExtResource("11_ei6el")
region_enabled = true
region_rect = Rect2(7, 3, 6, 14)

[node name="Tail" type="AnimatedSprite2D" parent="Butt/ButtSprite" unique_id=990181900]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_4dxs5")
frame = 2
frame_progress = 0.490707

[node name="Legs_back" type="AnimatedSprite2D" parent="Butt/ButtSprite" unique_id=291010464]
z_index = -1
position = Vector2(0, 13)
sprite_frames = SubResource("SpriteFrames_d51rk")
frame_progress = 0.618145

[node name="PausedInputBuffer" type="Node2D" parent="." unique_id=2135115763]
process_mode = 2
script = ExtResource("14_x26c4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
